minor change to handson12

--- a/handsOn_lecture12_bagging-boosting/handsOn12.ipynb
+++ b/handsOn_lecture12_bagging-boosting/handsOn12.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "*Hint 3*: Let's write down the objective function being minimized. For simplicity, assume there are a finite number of weak learners in $\\mathscr{F}$, say indexed by $j=1, \\ldots, m$. Given a weight vector $\\vec{\\alpha}$,  exponential loss over the data for this $\\vec{\\alpha}$ is: \n",
     "$$\\text{Loss}(\\vec{\\alpha}) = \\sum_{i=1}^n \\exp \\left( - y_i \\left(\\sum_{j=1}^m \\alpha_j h_j(\\vec{x}_i)\\right)\\right)$$\n",
-    "Coordinate descent chooses the most negative coordiante of $\\nabla L(\\vec{\\alpha})$ and updates *only this coordinate*. Which coordinate is chosen?"
+    "Coordinate descent chooses the smallest coordiante of $\\nabla L(\\vec{\\alpha})$ and updates *only this coordinate*. Which coordinate is chosen?"
    ]
   },
   {
