handsOn13_error-measures-and-ml-advice.ipynb

--- a/handsOn_lecture13_error-measures-and-ml-advice/handsOn13_error-measures-and-ml-advice.ipynb
+++ b/handsOn_lecture13_error-measures-and-ml-advice/handsOn13_error-measures-and-ml-advice.ipynb
@@ -2,7 +2,78 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## ROC Curves\n",
+    "\n",
+    "Recall that an ROC curve takes the **ranking** of the examples from a binary classifier, and plots the **True positive rate** versus the **False positive rate**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "<img src=\"svm.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"roc.jpg\" width=30%>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Problem 1:\n",
+    "\n",
+    "Let's say the binary classifier produces scores $\\text{scr}(\\vec{x})$. We are going to prove the following fact:\n",
+    "$$\\text{Area under the ROC curve } \\quad = \\quad \\mathop{\\text{Pr}}_{\\vec{x}_+ \\sim \\text{ Class+}, \\; \\vec{x}_- \\sim \\text{ Class-}} (\\text{scr}(\\vec{x}_+) \\geq \\text{scr}(\\vec{x}_-))$$\n",
+    "\n",
+    "### Part a)\n",
+    "Convince yourself of the following, that we can draw the ROC curve using the following procedure:\n",
+    "1. Sort the $\\vec{x}$'s by their score\n",
+    "1. Draw a blank $1 \\times 1$ square\n",
+    "1. Put your pen on the lower lefthand corner\n",
+    "1. For each of the $\\vec{x}$'s in the sorted list:\n",
+    "    1. Draw **up** a length equal to $1/\\text{num pos examples}$ if the example is a **positive** example\n",
+    "    1. Draw **right** a length equal to $1/\\text{num neg examples}$ if the example is a **negative** example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Part b)\n",
+    "\n",
+    "Now see if you can figure out WHY the statement we want to prove is true.\n",
+    "\n",
+    "*Hint*: Think about how to sample a positive example and a negative example, and how that relates to the shape of the ROC curve\n",
+    "\n",
+    "<img src=\"QY5BJ.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Learning curves\n",
     "\n",
@@ -296,8 +367,10 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
