adding pdf and minor edits

--- a/handsOn_lecture13_error-measures-and-ml-advice/handsOn13_error-measures-and-ml-advice.ipynb
+++ b/handsOn_lecture13_error-measures-and-ml-advice/handsOn13_error-measures-and-ml-advice.ipynb
@@ -75,7 +75,7 @@
     }
    },
    "source": [
-    "## Learning curves\n",
+    "## Problem 2: Learning curves\n",
     "\n",
     "Let's use learning curves to explore the bias / variance tradeoff. Learning curves work by plotting the training and test accuracy as a function of the amount of data the model has access to. As we learned in lecture, this helps us examine a few things:\n",
     "\n",
