addition of lec 15, and a new problem in handson 14

--- a/handsOn_lecture14_unsupervised-learning-pca-clustering/handsOn_lecture14_unsupervised-learning-pca-clustering.ipynb
+++ b/handsOn_lecture14_unsupervised-learning-pca-clustering/handsOn_lecture14_unsupervised-learning-pca-clustering.ipynb
@@ -2,7 +2,89 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## K-Means Clustering & PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### K-Means Clustering: The standard view\n",
+    "\n",
+    "The **K-Means** algorithm takes a simple, non-probabilistic approach.\n",
+    "- First, pick random cluster centers $\\mu_k$.\n",
+    "\n",
+    "Then, repeat until convergence:\n",
+    "\n",
+    "<div style=\"margin:10px; padding: 10px; border: 2px solid black\">\n",
+    "**E-Step:** Assign $x_j$ to the nearest cluster center $\\mu_k$,\n",
+    "$$\n",
+    "z_j = \\arg\\min_k || x_j - \\mu_k ||^2\n",
+    "$$\n",
+    "\n",
+    "**M-Step:** Re-estimate cluster centers by averaging over assignments:\n",
+    "$$\n",
+    "\\mu_k = \\frac{1}{ \\# \\{ j \\mid z_j =k \\}} \\sum_{j=1}^N x_j \\mathbb{I}(z_j = k)\n",
+    "$$\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### K-Means Clustering:  The \"Optimization\" View\n",
+    "\n",
+    "*Exercise:* Show that the K-Means algorithm finds a local minimum of the **distortion measure**, given by\n",
+    "$$\n",
+    "J(\\mu_1, \\ldots, \\mu_k; z_1, \\ldots, z_N) = \\sum_{j=1}^N \\sum_{k=1}^K \\mathbb{I}(z_j=k) || x_j - \\mu_k ||^2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Exercise: Convince yourself that K-Means = Alternating Minimization\n",
+    "\n",
+    "<div style=\"margin:10px; padding: 10px; border: 2px solid black\">\n",
+    "**E-Step:**\n",
+    "$$\n",
+    "(z_1, \\ldots, z_N) = \\arg\\min_{(z_1', \\ldots, z_N')} J(\\mu_1, \\ldots, \\mu_K; z_1', \\ldots, z_N')\n",
+    "$$\n",
+    "\n",
+    "**M-Step:**\n",
+    "$$\n",
+    "(\\mu_1, \\ldots, \\mu_K) = \\arg\\min_{(\\mu_1', \\ldots, \\mu_K')} J(\\mu_1', \\ldots, \\mu_K'; z_1, \\ldots, z_N)\n",
+    "$$\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Principal component analysis\n",
     "\n",
@@ -793,10 +875,11 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -808,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
