--- a/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
+++ b/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
@@ -23,12 +23,14 @@
     "\n",
     "Express the joint distribution of this network using the chain rule.\n",
     "\n",
-    "P(W,R,T,S,B,C) = ..."
+    "P(W,R,T,S,B,C) = ...\n",
+    "\n",
+    "*your answer goes here*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -41,6 +43,10 @@
        "    float:left;\n",
        "    margin-left: 1em;\n",
        "    margin-top: 1em;\n",
+       "}\n",
+       "\n",
+       "div.probs br.clear {\n",
+       "    clear:both;\n",
        "}\n",
        "</style>"
       ],
@@ -60,6 +66,10 @@
     "    margin-left: 1em;\n",
     "    margin-top: 1em;\n",
     "}\n",
+    "\n",
+    "div.probs br.clear {\n",
+    "    clear:both;\n",
+    "}\n",
     "</style>\n"
    ]
   },
@@ -69,7 +79,7 @@
    "source": [
     "### Computing Probabilities\n",
     "\n",
-    "Assuming the probabilities are as follows:\n",
+    "Assuming the (conditional) distributions are as follows:\n",
     "\n",
     "<div class=probs>\n",
     "\n",
@@ -79,8 +89,8 @@
     "<th>$w^1$</th>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td>0.7</td>\n",
-    "<td>0.3</td>\n",
+    "<td>0.2</td>\n",
+    "<td>0.8</td>\n",
     "</tr>\n",
     "</table>\n",
     "\n",
@@ -90,10 +100,23 @@
     "<th>$r^1$</th>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td>0.8</td>\n",
-    "<td>0.2</td>\n",
+    "<td>0.68</td>\n",
+    "<td>0.32</td>\n",
     "</tr>\n",
     "</table>\n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<th>$t^0$</th>\n",
+    "<th>$t^1$</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>0.85</td>\n",
+    "<td>0.15</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<br class=\"clear\">\n",
     "\n",
     "<table>\n",
     "<tr>\n",
@@ -102,32 +125,50 @@
     "<th>$s^1$</th>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td>$w^0$, $r^0$</td>\n",
-    "<td>0.2</td><td>0.8</td>\n",
+    "<td>$w^0$, $r^0$</td><td>0.4</td><td>0.6</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td>$w^0$, $r^1$</td>\n",
-    "<td>0.2</td><td>0.8</td>\n",
+    "<td>$w^0$, $r^1$</td><td>0.9</td><td>0.1</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td>$w^1$, $r^0$</td>\n",
-    "<td>0.2</td><td>0.8</td>\n",
+    "<td>$w^1$, $r^0$</td><td>0.05</td><td>0.95</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td>$w^1$, $r^1$</td>\n",
-    "<td>0.2</td><td>0.8</td>\n",
+    "<td>$w^1$, $r^1$</td><td>0.3</td><td>0.7</td>\n",
     "</tr>\n",
     "</table>\n",
     "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<th><th>$b^0$</th><th>$b^1$</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>$t^0$</td><td>0.15</td><td>0.85</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>$t^1$</td><td>0.7<td>0.3</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "<br class=\"clear\">\n",
     "\n",
     "<table>\n",
     "<tr>\n",
     "<th></th>\n",
-    "<th></th>\n",
+    "<th>$c^0$</th>\n",
+    "<th>$c^1$</th>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td></td>\n",
-    "<td></td>\n",
+    "<td>$s^0$, $b^0$</td><td>0.4</td><td>0.6</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>$s^0$, $b^1$</td><td>0.9</td><td>0.1</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>$s^1$, $b^0$</td><td>0.05</td><td>0.95</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>$s^1$, $b^1$</td><td>0.1</td><td>0.9</td>\n",
     "</tr>\n",
     "</table>\n",
     "\n",
@@ -135,20 +176,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "What is the probability you wake up on time, your roomate takes a long shower, there's bad traffic, you and the bus are both late to the bus stop and you make it to class on time?\n",
+    "\n",
+    "*your answer goes here*\n",
+    "\n",
+    "### Exercise: Marginal distribution\n",
+    "\n",
+    "What does the graph look like if you integrate out R, \"roomate took a long shower\"? What do the condional distributions look like?\n",
+    "\n",
+    "*your answer goes here*\n",
+    "\n",
+    "### Exercise: A Legal distribution\n",
+    "\n",
+    "Show that the joint distribution represented by the network above represents a legal distribution, that is, every outcome has a positive probability and $\\sum P = 1$"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -160,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
