minor edits to handson 14 and lec 15

--- a/handsOn_lecture14_unsupervised-learning-pca-clustering/handsOn_lecture14_unsupervised-learning-pca-clustering.ipynb
+++ b/handsOn_lecture14_unsupervised-learning-pca-clustering/handsOn_lecture14_unsupervised-learning-pca-clustering.ipynb
@@ -75,7 +75,13 @@
     "$$\n",
     "(\\mu_1, \\ldots, \\mu_K) = \\arg\\min_{(\\mu_1', \\ldots, \\mu_K')} J(\\mu_1', \\ldots, \\mu_K'; z_1, \\ldots, z_N)\n",
     "$$\n",
-    "</div>"
+    "\n",
+    "</div>\n",
+    "\n",
+    "where\n",
+    "$$\n",
+    "J(\\mu_1, \\ldots, \\mu_k; z_1, \\ldots, z_N) = \\sum_{j=1}^N \\sum_{k=1}^K \\mathbb{I}(z_j=k) || x_j - \\mu_k ||^2\n",
+    "$$\n"
    ]
   },
   {
