--- a/lecture15_exp_families_bayesian_networks/lecture15_exp_families_bayesian_networks.ipynb
+++ b/lecture15_exp_families_bayesian_networks/lecture15_exp_families_bayesian_networks.ipynb
@@ -475,7 +475,7 @@
     "= \\left[ \\prod_{k=1}^N h(x_k) \\right] Z(\\theta)^{-N} \\exp\\left[ \\eta(\\theta)^T \\left(\\sum_{k=1}^N \\phi(x_k) \\right) \\right]\n",
     "$$\n",
     "\n",
-    "The sufficient statistics are now $\\phi(\\D) = \\sum_{k=1}^N \\phi(x)$.\n",
+    "The sufficient statistics are now $\\phi(\\D) = \\sum_{k=1}^N \\phi(x_k)$.\n",
     "- **Bernoulli:**  $\\phi = \\# Heads$\n",
     "- **Normal:** $\\phi = [ \\sum_k x_k, \\sum_k x_k^2 ]$"
    ]
