--- a/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
+++ b/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
@@ -2,7 +2,159 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "$$ \\LaTeX \\text{ command declarations here.}\n",
+    "\\newcommand{\\R}{\\mathbb{R}}\n",
+    "\\renewcommand{\\vec}[1]{\\mathbf{#1}}\n",
+    "\\newcommand{\\X}{\\mathcal{X}}\n",
+    "\\newcommand{\\D}{\\mathcal{D}}\n",
+    "\\newcommand{\\G}{\\mathcal{G}}\n",
+    "\\newcommand{\\Parents}{\\mathrm{Parents}}\n",
+    "\\newcommand{\\NonDesc}{\\mathrm{NonDesc}}\n",
+    "\\newcommand{\\I}{\\mathcal{I}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Exponential Family Distributions\n",
+    "\n",
+    "**DEF:** $p(x | \\theta)$ has **exponential family form** if:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "p(x | \\theta)\n",
+    "&= \\frac{1}{Z(\\theta)} h(x) \\exp\\left[ \\eta(\\theta)^T \\phi(x) \\right] \\\\\n",
+    "&= h(x) \\exp\\left[ \\eta(\\theta)^T \\phi(x) - A(\\theta) \\right]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "- $Z(\\theta)$ is the **partition function** for normalization\n",
+    "- $A(\\theta) = \\log Z(\\theta)$ is the **log partition function**\n",
+    "- $\\phi(x) \\in \\R^d$ is a vector of **sufficient statistics**\n",
+    "- $\\eta(\\theta)$ maps $\\theta$ to a set of **natural parameters**\n",
+    "- $h(x)$ is a scaling constant, usually $h(x)=1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Problem:  Bernoulli in exponential family form\n",
+    "\n",
+    "As mentioned in lecture, the *Bernoulli* distribution can be described in expontial family form:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\mathrm{Ber}(x | \\mu)\n",
+    "&= \\mu^x (1-\\mu)^{1-x} \\\\ \n",
+    "&= (1-\\mu) \\exp\\left[ x \\log\\frac{\\mu}{1-\\mu} \\right]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "This gives **natural parameters** $\\eta = \\log \\frac{\\mu}{1-\\mu}$.\n",
+    "\n",
+    "**Problem**: What is the log partition function $A(\\eta)$?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Problem: Guassian Distribution in exp family form\n",
+    "\n",
+    "Recall that the gaussian distribution can be written as\n",
+    "$$p(x \\mid \\mu, \\sigma^2) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} \\exp\\left(-\\frac{(\\mu-x)^2}{2 \\sigma^2} \\right)$$\n",
+    "\n",
+    "**Problem**: Write this in exponential family form. Questions:\n",
+    "1. What is $\\phi(x)$?\n",
+    "1. What is the parameterization $\\eta(\\mu,\\sigma^2)$?\n",
+    "1. What is the log-partition $A(\\eta)$?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Magic of the log partition function\n",
+    "\n",
+    "Derivatives of the **log-partition function** $A(\\theta)$ yield **cumulants** of the sufficient statistics:\n",
+    "- $\\nabla_\\theta A(\\theta) = E[\\phi(x)]$\n",
+    "- $\\nabla^2_\\theta A(\\theta) = \\text{Cov}[ \\phi(x) ]$\n",
+    "\n",
+    "**Problem**: Prove the first statement using calculus.\n",
+    "\n",
+    "*Hint*: While this fact isn't always true, in this case you can use the following:\n",
+    "$$\\nabla_\\theta \\left( \\int f(x,\\theta) dx \\right) =  \\int \\nabla_\\theta f(x,\\theta) dx$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Problem: Conditional independence in PGMs\n",
+    "\n",
+    "<img src=\"basic_three.png\">\n",
+    "\n",
+    "**Which of the following are true?**:\n",
+    "1. $P(C,B|A) = P(C|A) P(B |A)$\n",
+    "2. $P(C,B) = P(C) P(B)$\n",
+    "\n",
+    "Prove your answer!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Problem: Conditional independence in PGMs\n",
+    "\n",
+    "<img src=\"basic_three2.png\">\n",
+    "\n",
+    "**Which of the following are true?**:\n",
+    "1. $P(C,B|A) = P(C|A) P(B |A)$\n",
+    "2. $P(C,B) = P(C) P(B)$\n",
+    "\n",
+    "Prove your answer!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Bayesian Networks\n",
     "\n",
@@ -32,7 +184,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [
     {
@@ -75,7 +230,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Computing Probabilities\n",
     "\n",
@@ -178,7 +337,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "What is the probability you wake up on time, your roomate takes a long shower, there's bad traffic, you and the bus are both late to the bus stop and you make it to class on time?\n",
@@ -199,10 +361,11 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
