--- a/lecture15_exp_families_bayesian_networks/lecture15_exp_families_bayesian_networks.ipynb
+++ b/lecture15_exp_families_bayesian_networks/lecture15_exp_families_bayesian_networks.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -867,6 +867,7 @@
    "execution_count": 23,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
