--- a/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
+++ b/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
@@ -142,7 +142,7 @@
     "<img src=\"basic_three2.png\">\n",
     "\n",
     "**Which of the following are true?**:\n",
-    "1. $P(C,B|A) = P(C|A) P(B |A)$\n",
+    "1. $P(C,B|A) = P(C|B,A)$\n",
     "2. $P(C,B) = P(C) P(B)$\n",
     "\n",
     "Prove your answer!"
@@ -363,9 +363,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
