--- a/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
+++ b/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
@@ -347,16 +347,27 @@
     "\n",
     "*your answer goes here*\n",
     "\n",
-    "### Exercise: Marginal distribution\n",
+    "### Exercise: Marginalizatioin\n",
     "\n",
-    "What does the graph look like if you integrate out R, \"roomate took a long shower\"? What do the condional distributions look like?\n",
+    "What is the probability that you get to the bus stop on time given you wake up on time?\n",
     "\n",
     "*your answer goes here*\n",
     "\n",
-    "### Exercise: A Legal distribution\n",
+    "### Exercise: v-structure\n",
     "\n",
-    "Show that the joint distribution represented by the network above represents a legal distribution, that is, every outcome has a positive probability and $\\sum P = 1$"
+    "What is the probability that you get to the bus stop on time given that you make it to class on time? $P(S|C)$\n",
+    "\n",
+    "What is the probability that you get to the bus stop on time given that you make it to class on time and bus arrives on time? $P(S|C,B)$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
