edits to handson, added viterbi problem

--- a/handsOn_lecture16_pgms_latent_vars_cond_independence/handsOn_lecture16_pgms_latent_vars_cond_independence.ipynb
+++ b/handsOn_lecture16_pgms_latent_vars_cond_independence/handsOn_lecture16_pgms_latent_vars_cond_independence.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Learning \n",
     "\n",
@@ -28,7 +32,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Conditional independence and Graphical Models\n",
     "\n",
@@ -40,51 +48,148 @@
     "\n",
     "<img src=\"ind1.png\">\n",
     "\n",
-    "**Q2**: is $A \\perp B \\mid E$?\n",
     "\n",
-    "<img src=\"ind1-observed.png\">\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Q2**: is $A \\perp B \\mid E$?\n",
+    "\n",
+    "<img src=\"ind1-observed.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Q3**: is $A \\perp B \\mid C$?\n",
     "\n",
     "<img src=\"ind2-observed-c.png\">\n",
     "\n",
-    "**Q4**: is $A \\perp B \\mid F$?\n",
     "\n",
-    "<img src=\"ind2-observed-f.png\">\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Q4**: is $A \\perp B \\mid F$?\n",
+    "\n",
+    "<img src=\"ind2-observed-f.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Q5**: is $X_4 \\perp \\left\\{ {X_1, X_3} \\right\\} \\mid X_2$?\n",
     "\n",
     "<img src=\"ind3-observed-x2.png\">\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "**Q6**: is $X_1 \\perp X_6 \\mid \\left\\{ {X_2, X_3} \\right\\} $?\n",
     "\n",
-    "<img src=\"ind3-observed-x2x3.png\">\n",
+    "<img src=\"ind3-observed-x2x3.png\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "**Q7**: is $X_2 \\perp X_3 \\mid \\left\\{ {X_1, X_6} \\right\\} $?\n",
     "\n",
-    "<img src=\"ind3-observed-x1x6.png\">\n"
+    "<img src=\"ind3-observed-x1x6.png\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Hidden Markov Models\n",
+    "\n",
+    "<img src=\"../lecture15_exp_families_bayesian_networks/images/hmm.png\">\n",
+    "\n",
+    "Noisy observations $X_k$ generated from hidden Markov chain $Y_k$.\n",
+    "$$\n",
+    "P(\\vec{X}, \\vec{Y}) = P(Y_1) P(X_1 \\mid Y_1) \\prod_{k=2}^N \\left(P(Y_k \\mid Y_{k-1}) P(X_k \\mid Y_k)\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Problem: Find the most likely sequence\n",
+    "\n",
+    "Assume you are given the parameters of the HMM model, i.e. $\\pi_y = P(Y_1 = y)$, $B_{i,j} = P(X_k = j \\mid Y_k = i)$, and $A_{i,j} = P(Y_k = j \\mid Y_{k-1} = i)$.\n",
+    "\n",
+    "Assume you are given a sequence of observed variables $X_1, \\ldots, X_T$. Can you figure out how to compute the *most likely sequence* of unobserved variables? That is, how can we compute:\n",
+    "$$ \\arg\\max_{Y_1, \\ldots, Y_T} P(Y_1, \\ldots, Y_T \\mid X_1, \\ldots, X_T) $$\n",
+    "\n",
+    "*Hint*: Dynamic programming. Try to recursively compute $V_{t}(i)$, which is the probability (given all of the observed data) of the most likely (sub)sequence $Y_1, \\ldots, Y_t$ *that ends in* $Y_t = i$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
