minor edits to lecture slides

--- a/lecture16_pgms_latent_vars_cond_independence/lecture16_pgms_latent_vars_cond_independence.ipynb
+++ b/lecture16_pgms_latent_vars_cond_independence/lecture16_pgms_latent_vars_cond_independence.ipynb
@@ -1443,7 +1443,7 @@
     }
    },
    "source": [
-    "### Question 6:  Is $P(A \\perp B \\mid C)$?"
+    "### Question 6:  Is $(A \\perp B \\mid C)$?"
    ]
   },
   {
