--- a/lecture17_clustering-mixtures-em/lecture17_clustering-mixtures-em.ipynb
+++ b/lecture17_clustering-mixtures-em/lecture17_clustering-mixtures-em.ipynb
@@ -659,7 +659,7 @@
     "Suppose we observe both $X$ and $Z$.  The **complete data log-likelihood** is\n",
     "$$\n",
     "\\ell_c(\\theta)\n",
-    "= P(X,Z | \\theta)\n",
+    "= \\log P(X,Z | \\theta)\n",
     "= \\sum_{n=1}^N \\log p(x_n, z_n | \\theta)\n",
     "$$\n",
     "\n",
@@ -1061,9 +1061,14 @@
     "<div>\n",
     "**E-Step:** Write down an expression for \n",
     "    $$\n",
-    "    Q(\\theta_t, \\theta) = E_q[ \\log p(\\X,Z | \\theta) ]\n",
+    "    Q(\\theta_t, \\theta) = E_q[ \\log p(\\X,Z | \\theta) ],\n",
     "    $$\n",
-    "</div><div>\n",
+    "    where  $q(Z) = p(Z | \\X, \\theta_t)$\n",
+    "</div>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<div>\n",
     "**M-Step:** Maximize the auxiliary function,\n",
     "    $$\n",
     "    \\theta_{t+1}\n",
