--- a/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
+++ b/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -285,16 +285,17 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.32,  0.03,  0.03,  0.  ],\n",
-       "        [ 0.  ,  0.  ,  0.  ,  0.  ],\n",
-       "        [ 0.  ,  0.  ,  0.  ,  0.  ],\n",
-       "        [ 0.  ,  0.  ,  0.  ,  0.  ],\n",
-       "        [ 0.  ,  0.  ,  0.  ,  0.  ],\n",
-       "        [ 0.  ,  0.  ,  0.  ,  0.  ],\n",
-       "        [ 0.  ,  0.  ,  0.  ,  0.  ]]), 0.0)"
+       "(array([[ 0.32      ,  0.03      ,  0.03      ,  0.        ],\n",
+       "        [ 0.0047    ,  0.2144    ,  0.0056    ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.13023   ,  0.        ],\n",
+       "        [ 0.052092  ,  0.        ,  0.        ,  0.        ],\n",
+       "        [ 0.00416736,  0.00416736,  0.00052092,  0.        ],\n",
+       "        [ 0.        ,  0.00039069,  0.0027192 ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  0.        ,  0.00035006]]),\n",
+       " 0.00035005824000000028)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,11 @@
     "    alpha[0, :] = pi * B[:,observations[0]]\n",
     "    \n",
     "    # recursive case - YOUR CODE GOES HERE\n",
-    "    \n",
+    "    # SOLUTION\n",
+    "    for i in range(1, N):\n",
+    "        for s2 in range(S):\n",
+    "            for s1 in range(S):\n",
+    "                alpha[i, s2] += alpha[i-1, s1] * A[s1, s2] * B[s2, observations[i]]    \n",
     "    return (alpha, np.sum(alpha[N-1,:]))\n",
     "\n",
     "forward((pi, A, B), [THE, DOG, WALKED, IN, THE, PARK, END])\n"
@@ -336,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -347,16 +352,17 @@
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0.,  0.],\n",
-       "        [ 0.,  0.,  0.,  0.],\n",
-       "        [ 1.,  1.,  1.,  1.]]), 0.0)"
+       "(array([[ 0.00104026,  0.00016397,  0.00040858,  0.        ],\n",
+       "        [ 0.0002688 ,  0.0016128 ,  0.0005376 ,  0.        ],\n",
+       "        [ 0.000672  ,  0.000672  ,  0.002688  ,  0.        ],\n",
+       "        [ 0.00672   ,  0.004     ,  0.01016   ,  0.        ],\n",
+       "        [ 0.025     ,  0.056     ,  0.024     ,  0.        ],\n",
+       "        [ 0.        ,  0.2       ,  0.1       ,  1.        ],\n",
+       "        [ 1.        ,  1.        ,  1.        ,  1.        ]]),\n",
+       " 0.00035005824000000022)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,6 +379,11 @@
     "    beta[N-1, :] = 1\n",
     "    \n",
     "    # recursive case -- YOUR CODE GOES HERE!    \n",
+    "    # SOLUTION\n",
+    "    for i in range(N-2, -1, -1):\n",
+    "        for s1 in range(S):\n",
+    "            for s2 in range(S):\n",
+    "                beta[i, s1] += beta[i+1, s2] * A[s1, s2] * B[s2, observations[i+1]]\n",
     "    \n",
     "    return (beta, np.sum(pi * B[:, observations[0]] * beta[0,:]))\n",
     "\n",
