minor lecture edits

--- a/lecture19_baum-welch-pgm-inference/lecture19_baum-welch-pgm-inference.ipynb
+++ b/lecture19_baum-welch-pgm-inference/lecture19_baum-welch-pgm-inference.ipynb
@@ -120,12 +120,12 @@
     }
    },
    "source": [
-    "# EECS 545:  Machine Learning\n",
+    "# EECS 445:  Machine Learning\n",
     "\n",
-    "## Lecture 18:  Inference & Applications of PGMs\n",
+    "## Lecture 19: Baum-Welch Algorithm, and Inference in PGMs\n",
     "\n",
     "- Instructor:  **Jacob Abernethy**\n",
-    "- Date:  March 23, 2016\n",
+    "- Date:  November 21, 2016\n",
     "\n",
     "*Lecture Exposition:*  Benjamin Bray"
    ]
@@ -608,7 +608,7 @@
     "$$\n",
     "\\begin{align}\n",
     "\\log p(z_1 | \\pi)\n",
-    "    &= \\sum_{j=1}^N \\mathbb{I}(z_t=j) \\log \\pi_j \\\\\n",
+    "    &= \\sum_{j=1}^N \\mathbb{I}(z_1=j) \\log \\pi_j \\\\\n",
     "\\log p(z_t | z_{t-1}, A)\n",
     "    &= \\sum_{i=1}^N \\sum_{j=1}^N \n",
     "        \\mathbb{I}(z_{t-1}=i)\\mathbb{I}(z_t=j) \\log A_{ij} \\\\\n",
@@ -1860,23 +1860,24 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
