--- a/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
+++ b/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
@@ -381,11 +381,12 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -397,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
