--- a/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
+++ b/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
@@ -249,12 +249,13 @@
     "\n",
     "# emission probabilities\n",
     "B = np.array([\n",
-    "        # the   dog  walked  in   park  end\n",
-    "        [ 0.8,  0.1,  0.0,  1.0 , 0.0,  0.0], # D\n",
-    "        [ 0.1,  0.8,  0.0,  0.0,  0.1,  0.0], # N\n",
-    "        [ 0.1,  0.1,  1.0,  0.0,  0.9,  0.0], # V\n",
-    "        [ 0. ,  0.0,  0.0,  0.0,  0.0,  1.0]  # E\n",
-    "    ])\n"
+    "        # D     N     V     E\n",
+    "        [ 0.8,  0.1,  0.1,  0. ],  # the\n",
+    "        [ 0.1,  0.8,  0.1,  0. ],  # dog\n",
+    "        [ 0. ,  0. ,  1. ,  0. ],  # walked\n",
+    "        [ 1. ,  0. ,  0. ,  0. ],  # in\n",
+    "        [ 0. ,  0.1,  0.9,  0. ],  # park\n",
+    "        [ 0. ,  0. ,  0. ,  1. ]]) # end"
    ]
   },
   {
@@ -312,7 +313,8 @@
     "    alpha = np.zeros((N, S))\n",
     "    \n",
     "    # base case\n",
-    "    alpha[0, :] = pi * B[:,observations[0]]\n",
+    "    # p(z1) * p(x1|z1)\n",
+    "    alpha[0, :] = pi * B[observations[0], :]\n",
     "    \n",
     "    # recursive case - YOUR CODE GOES HERE\n",
     "    \n",
@@ -331,7 +333,7 @@
    "source": [
     "### Problem: Implement the Backward Algorithm\n",
     "\n",
-    "If you implemented both correctly, the second return value from each method should match."
+    "If you implemented both correctly, the second return value (the marginals) from each method should match."
    ]
   },
   {
@@ -374,13 +376,14 @@
     "    \n",
     "    # recursive case -- YOUR CODE GOES HERE!    \n",
     "    \n",
-    "    return (beta, np.sum(pi * B[:, observations[0]] * beta[0,:]))\n",
+    "    return (beta, np.sum(pi * B[observations[0], :] * beta[0,:]))\n",
     "\n",
     "backward((pi, A, B), [THE, DOG, WALKED, IN, THE, PARK, END])"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [Root]",
