--- a/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
+++ b/handsOn_lecture18_gmm-hmm/handsOn_lecture18_gmm-hmm.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -296,14 +296,12 @@
        " 0.00035005824000000028)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "np.set_printoptions(suppress=True)\n",
     "\n",
     "def forward(params, observations):\n",
@@ -322,10 +320,11 @@
     "    for i in range(1, N):\n",
     "        for s2 in range(S):\n",
     "            for s1 in range(S):\n",
-    "                alpha[i, s2] += alpha[i-1, s1] * A[s1, s2] * B[s2, observations[i]]    \n",
+    "                alpha[i, s2] += alpha[i-1, s1] * A[s1, s2] * B[observations[i], s2]    \n",
+    "    \n",
     "    return (alpha, np.sum(alpha[N-1,:]))\n",
     "\n",
-    "forward((pi, A, B), [THE, DOG, WALKED, IN, THE, PARK, END])\n"
+    "forward((pi, A, B), [THE, DOG, WALKED, IN, THE, PARK, END])"
    ]
   },
   {
@@ -343,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -364,7 +363,7 @@
        " 0.00035005824000000022)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,11 +384,11 @@
     "    for i in range(N-2, -1, -1):\n",
     "        for s1 in range(S):\n",
     "            for s2 in range(S):\n",
-    "                beta[i, s1] += beta[i+1, s2] * A[s1, s2] * B[s2, observations[i+1]]\n",
+    "                beta[i, s1] += beta[i+1, s2] * A[s1, s2] * B[observations[i+1], s2]\n",
     "    \n",
     "    return (beta, np.sum(pi * B[observations[0], :] * beta[0,:]))\n",
     "\n",
-    "backward((pi, A, B), [THE, DOG, WALKED, IN, THE, PARK, END])"
+    "backward((pi, A, B), [THE, DOG, WALKED, IN, THE, PARK, END])\n"
    ]
   }
  ],
@@ -397,9 +396,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -411,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
