disc08 draft pdf

--- a/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
+++ b/handsOn_lecture15_exp_families_bayesian_networks/handsOn_lecture15_exp_families_bayesian_networks.ipynb
@@ -100,8 +100,8 @@
    "source": [
     "## Magic of the log partition function\n",
     "\n",
-    "Derivatives of the **log-partition function** $A(\\theta)$ yield **cumulants** of the sufficient statistics:\n",
-    "- $\\nabla_\\theta A(\\theta) = E[\\phi(x)]$\n",
+    "Derivatives of the **log-partition function** $A(\\theta)$ yield **cumulants** of the sufficient statistics (assume $h(x)=1$ and $\\eta(\\theta) = \\theta$):\n",
+    "- $\\nabla_\\theta A(\\theta) = E_{x}[\\phi(x)]$\n",
     "- $\\nabla^2_\\theta A(\\theta) = \\text{Cov}[ \\phi(x) ]$\n",
     "\n",
     "**Problem**: Prove the first statement using calculus.\n",
