--- a/handsOn_lecture17_clustering-mixtures-em/handsOn_lecture17_clustering-mixtures-em.ipynb
+++ b/handsOn_lecture17_clustering-mixtures-em/handsOn_lecture17_clustering-mixtures-em.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "The $\\log p(Z)$ term is constant wrt $\\theta$, so we ignore it.\n",
     "> Recall $q \\equiv q_{\\theta_t} = p(Z | \\X,\\theta_t)$\n",
-    "\n",
+    "TYPO FIXED!\n",
     "$$\n",
     "\\begin{align}\n",
     "E_q[\\log p(\\X | Z, \\theta)]\n",
@@ -201,9 +201,9 @@
     "    \\bigg] + \\text{const.}\n",
     "\\\\\n",
     "&= \\sum_{n=1}^N q_\\vartheta(z_n=A)\n",
-    "    \\bigg[ x_n \\log \\theta_A + (M-x_n) \\log \\theta_A \\bigg] \\\\\n",
+    "    \\bigg[ x_n \\log \\theta_A + (M-x_n) {\\color{red}{ \\log (1-\\theta_A)}} \\bigg] \\\\\n",
     "&+ \\sum_{n=1}^N q_\\vartheta(z_n=B)\n",
-    "    \\bigg[ x_n \\log \\theta_B + (M-x_n) \\log \\theta_B \\bigg]\n",
+    "    \\bigg[ x_n \\log \\theta_B + (M-x_n) {\\color{red}{\\log (1-\\theta_B)}} \\bigg]\n",
     " + \\text{const.}\n",
     "\\end{align}\n",
     "$$\n"
@@ -419,8 +419,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
