--- a/misc/nb_samplecode.ipynb
+++ b/misc/nb_samplecode.ipynb
@@ -262,7 +262,7 @@
     "\n",
     "plt.scatter(np.abs(np.log(theta0[0,:,0] / theta0[1,:,0])), mutual_info)\n",
     "\n",
-    "plt.scatter(np.abs(np.log(theta0[0,:,1] / theta0[1,:,1])), mutual_info, color='red')\n",
+    "plt.scatter(np.abs(np.log(theta0[0,:,1kk] / theta0[1,:,1])), mutual_info, color='red')\n",
     "\n",
     "plt.show()"
    ]
