--- a/handsOn_lecture19_baum-welch-pgm-inference/handsOn_lecture19_baum-welch-pgm-inference.ipynb
+++ b/handsOn_lecture19_baum-welch-pgm-inference/handsOn_lecture19_baum-welch-pgm-inference.ipynb
@@ -416,7 +416,7 @@
    "source": [
     "## Training with examples\n",
     "\n",
-    "Let's try producing updated parameters to our HMM using a few examples"
+    "Let's try producing updated parameters to our HMM using a few examples. How did the A and B matrixes get updated with data? Was any confidence gained in the emission probabilities of nouns? Verbs?"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "source": [
     "## Tracing through the implementation\n",
     "\n",
-    "Let's look at a trace of one iteration one a single training sample. Study the steps carefully and make sure you understand how we are updating the parameters, corresponding to these updates:\n",
+    "Let's look at a trace of one iteration. Study the steps carefully and make sure you understand how we are updating the parameters, corresponding to these updates:\n",
     "\n",
     "$ p(z_{t-1}, z_t | \\X, \\theta) = \\frac{\\alpha_{t-1}(z_{t-1}) \\beta_t(z_t) A_{z_{t-1}, z_t} B_{z_t, x_t}}{\\sum_k \\alpha_t(k)\\beta_t(k)} $\n",
     "\n"
@@ -750,35 +750,236 @@
       "    [[ 0.30007624  1.80070425  0.15138052  0.        ]\n",
       "     [ 0.00023036  0.03486688  1.63341231  0.22321429]\n",
       "     [ 1.00092145  0.04210065  0.03630733  0.77678571]\n",
-      "     [ 0.          0.          0.          1.        ]]\n"
+      "     [ 0.          0.          0.          1.        ]]\n",
+      "  for observations=[0, 2, 4, 5, 0, 6, 7, 7] in training\n",
+      "    alpha, za = forward((pi, A, B), observations)\n",
+      "    beta, zb = backward((pi, A, B), observations)\n",
+      "    alpha:\n",
+      "    [[ 0.32        0.03        0.03        0.        ]\n",
+      "     [ 0.0047      0.2144      0.0056      0.        ]\n",
+      "     [ 0.          0.005376    0.104184    0.        ]\n",
+      "     [ 0.0422112   0.          0.          0.        ]\n",
+      "     [ 0.0033769   0.0033769   0.00042211  0.        ]\n",
+      "     [ 0.          0.00031658  0.00220342  0.        ]\n",
+      "     [ 0.          0.          0.          0.00028366]\n",
+      "     [ 0.          0.          0.          0.00028366]]\n",
+      "    beta:\n",
+      "    [[ 0.00084228  0.00013574  0.00033519  0.        ]\n",
+      "     [ 0.00032256  0.00130368  0.0004704   0.        ]\n",
+      "     [ 0.000672    0.000672    0.002688    0.        ]\n",
+      "     [ 0.00672     0.004       0.01016     0.        ]\n",
+      "     [ 0.025       0.056       0.024       0.        ]\n",
+      "     [ 0.          0.2         0.1         1.        ]\n",
+      "     [ 0.          0.2         0.1         1.        ]\n",
+      "     [ 1.          1.          1.          1.        ]]\n",
+      "    za:\n",
+      "    0.0002836592640000002\n",
+      "    zb:\n",
+      "    0.00028365926400000015\n",
+      "    pi1 += alpha[0, :] * beta[0, :] / za\n",
+      "    pi1:\n",
+      "    [ 1.90112628  0.02840844  0.07046528  0.        ]\n",
+      "    for i in range(0, len(observations)):\n",
+      "      B1[observations[0], :] += alpha[0, :] * beta[0, :] / za\n",
+      "      B1[observations[1], :] += alpha[1, :] * beta[1, :] / za\n",
+      "      B1[observations[2], :] += alpha[2, :] * beta[2, :] / za\n",
+      "      B1[observations[3], :] += alpha[3, :] * beta[3, :] / za\n",
+      "      B1[observations[4], :] += alpha[4, :] * beta[4, :] / za\n",
+      "      B1[observations[5], :] += alpha[5, :] * beta[5, :] / za\n",
+      "      B1[observations[6], :] += alpha[6, :] * beta[6, :] / za\n",
+      "      B1[observations[7], :] += alpha[7, :] * beta[7, :] / za\n",
+      "    B1:\n",
+      "    [[ 2.49636437  1.36174177  0.14189385  0.        ]\n",
+      "     [ 0.003609    0.98779083  0.00860017  0.        ]\n",
+      "     [ 0.00534455  0.98536881  0.00928663  0.        ]\n",
+      "     [ 0.          0.          1.          0.        ]\n",
+      "     [ 0.          0.01273596  0.98726404  0.        ]\n",
+      "     [ 2.          0.          0.          0.        ]\n",
+      "     [ 0.          0.44642857  1.55357143  0.        ]\n",
+      "     [ 0.          0.          0.          4.        ]]\n",
+      "    for i in range(1, len(observations)):\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[0, 0] * A[0, 0] * B[observations[1], 0] * beta[1, 0] / za\n",
+      "          A1[0, 1] += alpha[0, 0] * A[0, 1] * B[observations[1], 1] * beta[1, 1] / za\n",
+      "          A1[0, 2] += alpha[0, 0] * A[0, 2] * B[observations[1], 2] * beta[1, 2] / za\n",
+      "          A1[0, 3] += alpha[0, 0] * A[0, 3] * B[observations[1], 3] * beta[1, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[0, 1] * A[1, 0] * B[observations[1], 0] * beta[1, 0] / za\n",
+      "          A1[1, 1] += alpha[0, 1] * A[1, 1] * B[observations[1], 1] * beta[1, 1] / za\n",
+      "          A1[1, 2] += alpha[0, 1] * A[1, 2] * B[observations[1], 2] * beta[1, 2] / za\n",
+      "          A1[1, 3] += alpha[0, 1] * A[1, 3] * B[observations[1], 3] * beta[1, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[0, 2] * A[2, 0] * B[observations[1], 0] * beta[1, 0] / za\n",
+      "          A1[2, 1] += alpha[0, 2] * A[2, 1] * B[observations[1], 1] * beta[1, 1] / za\n",
+      "          A1[2, 2] += alpha[0, 2] * A[2, 2] * B[observations[1], 2] * beta[1, 2] / za\n",
+      "          A1[2, 3] += alpha[0, 2] * A[2, 3] * B[observations[1], 3] * beta[1, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[0, 3] * A[3, 0] * B[observations[1], 0] * beta[1, 0] / za\n",
+      "          A1[3, 1] += alpha[0, 3] * A[3, 1] * B[observations[1], 1] * beta[1, 1] / za\n",
+      "          A1[3, 2] += alpha[0, 3] * A[3, 2] * B[observations[1], 2] * beta[1, 2] / za\n",
+      "          A1[3, 3] += alpha[0, 3] * A[3, 3] * B[observations[1], 3] * beta[1, 3] / za\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[1, 0] * A[0, 0] * B[observations[2], 0] * beta[2, 0] / za\n",
+      "          A1[0, 1] += alpha[1, 0] * A[0, 1] * B[observations[2], 1] * beta[2, 1] / za\n",
+      "          A1[0, 2] += alpha[1, 0] * A[0, 2] * B[observations[2], 2] * beta[2, 2] / za\n",
+      "          A1[0, 3] += alpha[1, 0] * A[0, 3] * B[observations[2], 3] * beta[2, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[1, 1] * A[1, 0] * B[observations[2], 0] * beta[2, 0] / za\n",
+      "          A1[1, 1] += alpha[1, 1] * A[1, 1] * B[observations[2], 1] * beta[2, 1] / za\n",
+      "          A1[1, 2] += alpha[1, 1] * A[1, 2] * B[observations[2], 2] * beta[2, 2] / za\n",
+      "          A1[1, 3] += alpha[1, 1] * A[1, 3] * B[observations[2], 3] * beta[2, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[1, 2] * A[2, 0] * B[observations[2], 0] * beta[2, 0] / za\n",
+      "          A1[2, 1] += alpha[1, 2] * A[2, 1] * B[observations[2], 1] * beta[2, 1] / za\n",
+      "          A1[2, 2] += alpha[1, 2] * A[2, 2] * B[observations[2], 2] * beta[2, 2] / za\n",
+      "          A1[2, 3] += alpha[1, 2] * A[2, 3] * B[observations[2], 3] * beta[2, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[1, 3] * A[3, 0] * B[observations[2], 0] * beta[2, 0] / za\n",
+      "          A1[3, 1] += alpha[1, 3] * A[3, 1] * B[observations[2], 1] * beta[2, 1] / za\n",
+      "          A1[3, 2] += alpha[1, 3] * A[3, 2] * B[observations[2], 2] * beta[2, 2] / za\n",
+      "          A1[3, 3] += alpha[1, 3] * A[3, 3] * B[observations[2], 3] * beta[2, 3] / za\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[2, 0] * A[0, 0] * B[observations[3], 0] * beta[3, 0] / za\n",
+      "          A1[0, 1] += alpha[2, 0] * A[0, 1] * B[observations[3], 1] * beta[3, 1] / za\n",
+      "          A1[0, 2] += alpha[2, 0] * A[0, 2] * B[observations[3], 2] * beta[3, 2] / za\n",
+      "          A1[0, 3] += alpha[2, 0] * A[0, 3] * B[observations[3], 3] * beta[3, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[2, 1] * A[1, 0] * B[observations[3], 0] * beta[3, 0] / za\n",
+      "          A1[1, 1] += alpha[2, 1] * A[1, 1] * B[observations[3], 1] * beta[3, 1] / za\n",
+      "          A1[1, 2] += alpha[2, 1] * A[1, 2] * B[observations[3], 2] * beta[3, 2] / za\n",
+      "          A1[1, 3] += alpha[2, 1] * A[1, 3] * B[observations[3], 3] * beta[3, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[2, 2] * A[2, 0] * B[observations[3], 0] * beta[3, 0] / za\n",
+      "          A1[2, 1] += alpha[2, 2] * A[2, 1] * B[observations[3], 1] * beta[3, 1] / za\n",
+      "          A1[2, 2] += alpha[2, 2] * A[2, 2] * B[observations[3], 2] * beta[3, 2] / za\n",
+      "          A1[2, 3] += alpha[2, 2] * A[2, 3] * B[observations[3], 3] * beta[3, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[2, 3] * A[3, 0] * B[observations[3], 0] * beta[3, 0] / za\n",
+      "          A1[3, 1] += alpha[2, 3] * A[3, 1] * B[observations[3], 1] * beta[3, 1] / za\n",
+      "          A1[3, 2] += alpha[2, 3] * A[3, 2] * B[observations[3], 2] * beta[3, 2] / za\n",
+      "          A1[3, 3] += alpha[2, 3] * A[3, 3] * B[observations[3], 3] * beta[3, 3] / za\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[3, 0] * A[0, 0] * B[observations[4], 0] * beta[4, 0] / za\n",
+      "          A1[0, 1] += alpha[3, 0] * A[0, 1] * B[observations[4], 1] * beta[4, 1] / za\n",
+      "          A1[0, 2] += alpha[3, 0] * A[0, 2] * B[observations[4], 2] * beta[4, 2] / za\n",
+      "          A1[0, 3] += alpha[3, 0] * A[0, 3] * B[observations[4], 3] * beta[4, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[3, 1] * A[1, 0] * B[observations[4], 0] * beta[4, 0] / za\n",
+      "          A1[1, 1] += alpha[3, 1] * A[1, 1] * B[observations[4], 1] * beta[4, 1] / za\n",
+      "          A1[1, 2] += alpha[3, 1] * A[1, 2] * B[observations[4], 2] * beta[4, 2] / za\n",
+      "          A1[1, 3] += alpha[3, 1] * A[1, 3] * B[observations[4], 3] * beta[4, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[3, 2] * A[2, 0] * B[observations[4], 0] * beta[4, 0] / za\n",
+      "          A1[2, 1] += alpha[3, 2] * A[2, 1] * B[observations[4], 1] * beta[4, 1] / za\n",
+      "          A1[2, 2] += alpha[3, 2] * A[2, 2] * B[observations[4], 2] * beta[4, 2] / za\n",
+      "          A1[2, 3] += alpha[3, 2] * A[2, 3] * B[observations[4], 3] * beta[4, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[3, 3] * A[3, 0] * B[observations[4], 0] * beta[4, 0] / za\n",
+      "          A1[3, 1] += alpha[3, 3] * A[3, 1] * B[observations[4], 1] * beta[4, 1] / za\n",
+      "          A1[3, 2] += alpha[3, 3] * A[3, 2] * B[observations[4], 2] * beta[4, 2] / za\n",
+      "          A1[3, 3] += alpha[3, 3] * A[3, 3] * B[observations[4], 3] * beta[4, 3] / za\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[4, 0] * A[0, 0] * B[observations[5], 0] * beta[5, 0] / za\n",
+      "          A1[0, 1] += alpha[4, 0] * A[0, 1] * B[observations[5], 1] * beta[5, 1] / za\n",
+      "          A1[0, 2] += alpha[4, 0] * A[0, 2] * B[observations[5], 2] * beta[5, 2] / za\n",
+      "          A1[0, 3] += alpha[4, 0] * A[0, 3] * B[observations[5], 3] * beta[5, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[4, 1] * A[1, 0] * B[observations[5], 0] * beta[5, 0] / za\n",
+      "          A1[1, 1] += alpha[4, 1] * A[1, 1] * B[observations[5], 1] * beta[5, 1] / za\n",
+      "          A1[1, 2] += alpha[4, 1] * A[1, 2] * B[observations[5], 2] * beta[5, 2] / za\n",
+      "          A1[1, 3] += alpha[4, 1] * A[1, 3] * B[observations[5], 3] * beta[5, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[4, 2] * A[2, 0] * B[observations[5], 0] * beta[5, 0] / za\n",
+      "          A1[2, 1] += alpha[4, 2] * A[2, 1] * B[observations[5], 1] * beta[5, 1] / za\n",
+      "          A1[2, 2] += alpha[4, 2] * A[2, 2] * B[observations[5], 2] * beta[5, 2] / za\n",
+      "          A1[2, 3] += alpha[4, 2] * A[2, 3] * B[observations[5], 3] * beta[5, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[4, 3] * A[3, 0] * B[observations[5], 0] * beta[5, 0] / za\n",
+      "          A1[3, 1] += alpha[4, 3] * A[3, 1] * B[observations[5], 1] * beta[5, 1] / za\n",
+      "          A1[3, 2] += alpha[4, 3] * A[3, 2] * B[observations[5], 2] * beta[5, 2] / za\n",
+      "          A1[3, 3] += alpha[4, 3] * A[3, 3] * B[observations[5], 3] * beta[5, 3] / za\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[5, 0] * A[0, 0] * B[observations[6], 0] * beta[6, 0] / za\n",
+      "          A1[0, 1] += alpha[5, 0] * A[0, 1] * B[observations[6], 1] * beta[6, 1] / za\n",
+      "          A1[0, 2] += alpha[5, 0] * A[0, 2] * B[observations[6], 2] * beta[6, 2] / za\n",
+      "          A1[0, 3] += alpha[5, 0] * A[0, 3] * B[observations[6], 3] * beta[6, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[5, 1] * A[1, 0] * B[observations[6], 0] * beta[6, 0] / za\n",
+      "          A1[1, 1] += alpha[5, 1] * A[1, 1] * B[observations[6], 1] * beta[6, 1] / za\n",
+      "          A1[1, 2] += alpha[5, 1] * A[1, 2] * B[observations[6], 2] * beta[6, 2] / za\n",
+      "          A1[1, 3] += alpha[5, 1] * A[1, 3] * B[observations[6], 3] * beta[6, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[5, 2] * A[2, 0] * B[observations[6], 0] * beta[6, 0] / za\n",
+      "          A1[2, 1] += alpha[5, 2] * A[2, 1] * B[observations[6], 1] * beta[6, 1] / za\n",
+      "          A1[2, 2] += alpha[5, 2] * A[2, 2] * B[observations[6], 2] * beta[6, 2] / za\n",
+      "          A1[2, 3] += alpha[5, 2] * A[2, 3] * B[observations[6], 3] * beta[6, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[5, 3] * A[3, 0] * B[observations[6], 0] * beta[6, 0] / za\n",
+      "          A1[3, 1] += alpha[5, 3] * A[3, 1] * B[observations[6], 1] * beta[6, 1] / za\n",
+      "          A1[3, 2] += alpha[5, 3] * A[3, 2] * B[observations[6], 2] * beta[6, 2] / za\n",
+      "          A1[3, 3] += alpha[5, 3] * A[3, 3] * B[observations[6], 3] * beta[6, 3] / za\n",
+      "      for s1 in range(S=4)\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[0, 0] += alpha[6, 0] * A[0, 0] * B[observations[7], 0] * beta[7, 0] / za\n",
+      "          A1[0, 1] += alpha[6, 0] * A[0, 1] * B[observations[7], 1] * beta[7, 1] / za\n",
+      "          A1[0, 2] += alpha[6, 0] * A[0, 2] * B[observations[7], 2] * beta[7, 2] / za\n",
+      "          A1[0, 3] += alpha[6, 0] * A[0, 3] * B[observations[7], 3] * beta[7, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[1, 0] += alpha[6, 1] * A[1, 0] * B[observations[7], 0] * beta[7, 0] / za\n",
+      "          A1[1, 1] += alpha[6, 1] * A[1, 1] * B[observations[7], 1] * beta[7, 1] / za\n",
+      "          A1[1, 2] += alpha[6, 1] * A[1, 2] * B[observations[7], 2] * beta[7, 2] / za\n",
+      "          A1[1, 3] += alpha[6, 1] * A[1, 3] * B[observations[7], 3] * beta[7, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[2, 0] += alpha[6, 2] * A[2, 0] * B[observations[7], 0] * beta[7, 0] / za\n",
+      "          A1[2, 1] += alpha[6, 2] * A[2, 1] * B[observations[7], 1] * beta[7, 1] / za\n",
+      "          A1[2, 2] += alpha[6, 2] * A[2, 2] * B[observations[7], 2] * beta[7, 2] / za\n",
+      "          A1[2, 3] += alpha[6, 2] * A[2, 3] * B[observations[7], 3] * beta[7, 3] / za\n",
+      "        for s2 in range(S=4)\n",
+      "          A1[3, 0] += alpha[6, 3] * A[3, 0] * B[observations[7], 0] * beta[7, 0] / za\n",
+      "          A1[3, 1] += alpha[6, 3] * A[3, 1] * B[observations[7], 1] * beta[7, 1] / za\n",
+      "          A1[3, 2] += alpha[6, 3] * A[3, 2] * B[observations[7], 2] * beta[7, 2] / za\n",
+      "          A1[3, 3] += alpha[6, 3] * A[3, 3] * B[observations[7], 3] * beta[7, 3] / za\n",
+      "    A1:\n",
+      "    [[ 0.60133413  3.60087644  0.30310735  0.        ]\n",
+      "     [ 0.01330746  0.0798651   3.25446482  0.44642857]\n",
+      "     [ 1.98955006  0.08491596  0.07257868  1.55357143]\n",
+      "     [ 0.          0.          0.          2.        ]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "          D         N         V         E\n",
+      "D  0.133472  0.799250  0.067278  0.000000\n",
+      "N  0.003507  0.021050  0.857778  0.117665\n",
+      "V  0.537627  0.022946  0.019613  0.419814\n",
+      "E  0.000000  0.000000  0.000000  1.000000\n",
+      "               D         N         V    E\n",
+      "the     0.624091  0.340435  0.035473  0.0\n",
+      "dog     0.003609  0.987791  0.008600  0.0\n",
+      "cat     0.005345  0.985369  0.009287  0.0\n",
+      "walked  0.000000  0.000000  1.000000  0.0\n",
+      "ran     0.000000  0.200000  0.800000  0.0\n",
+      "in      1.000000  0.000000  0.000000  0.0\n",
+      "park    0.000000  0.100000  0.900000  0.0\n",
+      "end     0.000000  0.000000  0.000000  1.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([ 0.95093296,  0.01405206,  0.03501497,  0.        ]),\n",
-       " array([[ 0.13323925,  0.79954508,  0.06721568,  0.        ],\n",
-       "        [ 0.00012177,  0.01843128,  0.86345178,  0.11799517],\n",
-       "        [ 0.53925612,  0.02268213,  0.01956093,  0.41850082],\n",
-       "        [ 0.        ,  0.        ,  0.        ,  1.        ]]),\n",
-       " array([[ 0.62427601,  0.34035936,  0.03536463,  0.        ],\n",
-       "        [ 0.003609  ,  0.98779083,  0.00860017,  0.        ],\n",
-       "        [        nan,         nan,         nan,         nan],\n",
-       "        [ 0.        ,  0.        ,  1.        ,  0.        ],\n",
-       "        [ 0.        ,  0.2       ,  0.8       ,  0.        ],\n",
-       "        [ 1.        ,  0.        ,  0.        ,  0.        ],\n",
-       "        [ 0.        ,  0.1       ,  0.9       ,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  0.        ,  1.        ]]))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "baum_welch([\n",
-    "        [THE, DOG, WALKED, IN, THE, PARK, END, END]], pi, A, B, 1, trace=True)"
+    "pi3, A3, B3 = baum_welch([\n",
+    "        [THE, DOG, WALKED, IN, THE, PARK, END, END], \n",
+    "        [THE, CAT, RAN, IN, THE, PARK, END, END]], pi, A, B, 1, trace=True)\n",
+    "\n",
+    "print(\"\\n\\n\")\n",
+    "\n",
+    "print_A(A3)\n",
+    "\n",
+    "print_B(B3)"
    ]
   }
  ],
