--- a/handsOn_lecture19_baum-welch-pgm-inference/handsOn_lecture19_baum-welch-pgm-inference-template.ipynb
+++ b/handsOn_lecture19_baum-welch-pgm-inference/handsOn_lecture19_baum-welch-pgm-inference-template.ipynb
@@ -63,14 +63,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.4         0.05        0.03333333  0.        ]\n",
+      " [ 0.05        0.4         0.03333333  0.        ]\n",
+      " [ 0.05        0.4         0.03333333  0.        ]\n",
+      " [ 0.          0.          0.33333333  0.        ]\n",
+      " [ 0.          0.1         0.26666667  0.        ]\n",
+      " [ 0.5         0.          0.          0.        ]\n",
+      " [ 0.          0.05        0.3         0.        ]\n",
+      " [ 0.          0.          0.          1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.set_printoptions(suppress=True)\n",
@@ -99,7 +114,9 @@
     "        [ 0. ,  0.2 , 0.8 ,  0. ], # ran\n",
     "        [ 1. ,  0. ,  0. ,  0. ],  # in\n",
     "        [ 0. ,  0.1,  0.9,  0. ],  # park\n",
-    "        [ 0. ,  0. ,  0. ,  1. ]]) # end\n"
+    "        [ 0. ,  0. ,  0. ,  1. ]]) # end\n",
+    "\n",
+    "B = B / np.sum(B, axis=0)\n"
    ]
   },
   {
