--- a/discussion09-explain-away/discussion09-draft2.tex
+++ b/discussion09-explain-away/discussion09-draft2.tex
@@ -67,7 +67,7 @@ which is positive because both terms in the parentheses are positive.
 \end{corollary}
 \begin{proof}
 	Note that 
-	\[P(t_1) = P(t_1 | d_1) p(d_1) + p(t_1 | d_0) p(d_0) < P(t_1 | d_1) p(d_1) + p(t_1 | d_1) p(d_0) = P(t_1 | d_1)\qedhere\]
+	\[P(t_1) = P(t_1 | d_1) p(d_1) + p(t_1 | d_0) p(d_0) > P(t_1 | d_1) p(d_1) + p(t_1 | d_1) p(d_0) = P(t_1 | d_1)\qedhere\]
 \end{proof}
 
 \begin{lemma}
