add loss to handson20

--- a/handsOn_lecture20_cnn-1/handsOn_lecture20_cnn-1.ipynb
+++ b/handsOn_lecture20_cnn-1/handsOn_lecture20_cnn-1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# The Backpropogation Algorithm\n",
     "\n",
-    "In this handson lecture we will implement a 3-layer neaural network from scratch.\n",
+    "In this handson lecture we will implement a 3-layer neural network from scratch.\n",
     "\n",
     "Note: this example is adapted from [this blog post](http://www.wildml.com/2015/09/implementing-a-neural-network-from-scratch/) and [notebook](https://github.com/dennybritz/nn-from-scratch/blob/master/nn-from-scratch.ipynb) to make it easier to work through without seeing the solution. It is well worth reading through the original post and notebook as well, but we advise you avoid peeking during this class exercise!\n",
     "\n",
@@ -176,6 +176,8 @@
    "metadata": {},
    "source": [
     "### Backwards propogation\n",
+    "\n",
+    "The loss function is $$L(y, \\hat{y}) = -\\frac{1}{N}\\sum_{n\\in N}\\sum_{i\\in C}y_{n, i}\\log \\hat{y}_{n, i}$$.\n",
     "\n",
     "To train the parameters of our network, we'll need to use backprop to compute the following gradients at each step:\n",
     "\n",
